js/src/jit-test/tests/binast/invalid/continue-outside-while.dir
// |jit-test| error: continue must be inside loop